fix fab z-index value

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -68,6 +68,7 @@ input:-webkit-autofill {
 	position: fixed;
 	right: 1rem;
 	bottom: 1rem;
+	z-index: 5;
 }
 .mdc-dialog__title,
 .mdc-drawer__title,
